<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading …</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tw__composer_hint">"What's Happening?"</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__max_tweet_chars">140</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="Adobe_CSDK_IDS_PLEASE_WAIT">Please Wait…</string>
    <string name="Adobe_CSDK_action_settings">Settings</string>
    <string name="IDS_COLLABORATION_SHARING_RESTRICTED_ERROR">"This feature isn't available because your organization has enabled sharing restrictions"</string>
    <string name="IDS_COLLABORATOR_LEAVE_FOLDER_FAILURE_MESSAGE">Could Not Leave Folder</string>
    <string name="IDS_COLLABORATOR_LEAVE_FOLDER_SUCCESS_MESSAGE">Successfully Left Folder</string>
    <string name="IDS_LIBRARY_EDIT_CHOOSE">Choose %s</string>
    <string name="adobe_csdk_COLLABORATION_DELETE_MESSAGE">Do you want to delete this collaborator ?</string>
    <string name="adobe_csdk_COLLABORATOR_DELETE_NEGATIVE_BUTTON">Cancel</string>
    <string name="adobe_csdk_COLLABORATOR_DELETE_POSITIVE_BUTTON">Delete</string>
    <string name="adobe_csdk_IDS_ACTION_VIEW_SHARE">Share</string>
    <string name="adobe_csdk_asset_edit_rename_button">Rename</string>
    <string name="adobe_csdk_asset_view_edit_archive_button">Archive</string>
    <string name="adobe_csdk_asset_view_edit_copy_button">Copy</string>
    <string name="adobe_csdk_asset_view_edit_delete_button">Delete</string>
    <string name="adobe_csdk_asset_view_edit_dialog_title">Confirm</string>
    <string name="adobe_csdk_asset_view_edit_fragment_delete_button">Delete</string>
    <string name="adobe_csdk_asset_view_edit_fragment_unsuscribe_button">Unfollow</string>
    <string name="adobe_csdk_asset_view_edit_move_button">Move</string>
    <string name="adobe_csdk_collaborator">Collaborators</string>
    <string name="bsdk_color_picker_cmyk">CMYK</string>
    <string name="bsdk_color_picker_hex">Hex</string>
    <string name="bsdk_color_picker_rgb">RGB</string>
    <string name="bsdk_color_picker_wheel">Wheel</string>
    <string name="bsdk_project_editor_accept">Accept</string>
    <string name="bsdk_project_editor_back">Back</string>
    <string name="bsdk_project_editor_cancel">Cancel</string>
    <string name="bsdk_project_editor_copyright_helper_allow_commercial">Would you like to allow commercial use of your work?</string>
    <string name="bsdk_project_editor_copyright_helper_allow_derivatives">Would you like to allow others to share adaptations of your work?</string>
    <string name="bsdk_project_editor_copyright_helper_allow_use">Would you like to allow others to share your work as long as they give you credit?</string>
    <string name="bsdk_project_editor_copyright_helper_share_alike">Would you like to require that shared adaptations contain a license no more restrictive than your own?</string>
    <string name="bsdk_project_editor_no">No</string>
    <string name="bsdk_project_editor_settings_field_adult_content">Contains Adult Content</string>
    <string name="bsdk_project_editor_settings_field_creative_fields">Creative Fields</string>
    <string name="bsdk_project_editor_settings_header_advanced">Advanced</string>
    <string name="bsdk_project_editor_settings_hint_tags">comma, separated, tags</string>
    <string name="bsdk_project_editor_settings_hint_title">Name Your Project</string>
    <string name="bsdk_project_editor_yes">Yes</string>
    <string name="automatic_backup_enabled">Automatic Backup Enabled</string>
    <string name="automatic_backup_text">"Your projects automatically sync to
your Creative Cloud account and will
be available across all your devices."</string>
    <string name="ccv_video_text">"View your published video and share on 
Facebook, Twitter and more."</string>
    <string name="ok_got_it">OK, got it.</string>
    <string name="share_video_text">SHARE VIDEO</string>
    <string name="share_work_live">Your Work is Live!</string>
    <string name="sharing_picker_camera">Save to Gallery</string>
    <string name="sharing_picker_creative_cloud">Save to Creative Cloud</string>
    <string name="sharing_picker_edit_pr">Send to Premiere Pro CC</string>
    <string name="sharing_picker_publish">Publish &amp; Share</string>
    <string name="sharing_picker_twitter">Share on Twitter</string>
    <string name="sharing_picker_youtube">Share on YouTube</string>
    <string name="sharing_publish_btn">Publish</string>
    <string name="youtube_disclaimer">"By clicking 'Publish', you certify that you own all rights to the content or that you are authorized by the owner to make the content publicly available on YouTube, and that it otherwise complies with the YouTube Terms of Service located at ."</string>
    <string name="youtube_private_text">Private</string>
    <string name="youtube_project_name">Project Name</string>
    <string name="youtube_public_text">Public</string>
    <string name="youtube_settings_madewithclip_text">Made with Adobe Premiere Clip. Make your own clip at https://premiereclip.adobe.com</string>
    <string name="youtube_settings_title">YouTube Settings</string>
    <string name="youtube_sign_out">Sign Out</string>
    <string name="youtube_signin_text"><u>Sign in to Publish</u></string>
    <string name="youtube_tag">tag1, tag2</string>
    <string name="youtube_unlisted_text">Unlisted</string>
</resources>