<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewFlipper android:id="@id/bsdk_dialog_copyright_helper_flipper" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_allow_use" android:text="@string/bsdk_project_editor_copyright_helper_allow_use" style="@style/BsdkProjectEditorCopyrightHelperText" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_allow_commercial_use" android:text="@string/bsdk_project_editor_copyright_helper_allow_commercial" style="@style/BsdkProjectEditorCopyrightHelperText" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_allow_deriv" android:text="@string/bsdk_project_editor_copyright_helper_allow_derivatives" style="@style/BsdkProjectEditorCopyrightHelperText" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_share_alike" android:text="@string/bsdk_project_editor_copyright_helper_share_alike" style="@style/BsdkProjectEditorCopyrightHelperText" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_recommendation" android:text="@string/bsdk_project_editor_copyright_helper_share_alike" style="@style/BsdkProjectEditorCopyrightHelperText" />
    </ViewFlipper>
    <LinearLayout android:orientation="horizontal" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_back" android:visibility="gone" android:text="@string/bsdk_project_editor_back" style="@style/BsdkProjectEditorCopyrightHelperButton" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_cancel" android:visibility="gone" android:text="@string/bsdk_project_editor_cancel" style="@style/BsdkProjectEditorCopyrightHelperButton" />
        <Space android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_no" android:text="@string/bsdk_project_editor_no" style="@style/BsdkProjectEditorCopyrightHelperButton" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_yes" android:text="@string/bsdk_project_editor_yes" style="@style/BsdkProjectEditorCopyrightHelperButton" />
        <com.behance.sdk.ui.customviews.BehanceSDKTextView android:id="@id/bsdk_dialog_copyright_helper_accept" android:visibility="gone" android:text="@string/bsdk_project_editor_accept" style="@style/BsdkProjectEditorCopyrightHelperButton" />
    </LinearLayout>
</LinearLayout>
