<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/sharing_option_background" android:background="#77000000" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:onClick="closeSharingOptions" />
    <LinearLayout android:orientation="vertical" android:id="@id/sharing_options_view" android:background="#f6f9fa" android:padding="8.0dp" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:id="@id/sharing_picker_savegallery" style="@style/sharingPickerButtonStyle">
            <ImageView android:src="@drawable/share_gallery" style="@style/sharingPickerImageStyle" />
            <TextView android:text="@string/sharing_picker_camera" style="@style/sharingPickerTextViewStyle" />
        </LinearLayout>
        <LinearLayout android:id="@id/sharing_picker_savecc" style="@style/sharingPickerButtonStyle">
            <ImageView android:src="@drawable/sourcepicker_cc" style="@style/sharingPickerImageStyle" />
            <TextView android:text="@string/sharing_picker_creative_cloud" style="@style/sharingPickerTextViewStyle" />
        </LinearLayout>
        <LinearLayout android:id="@id/sharing_picker_publish" style="@style/sharingPickerButtonStyle">
            <ImageView android:src="@drawable/share_publish" style="@style/sharingPickerImageStyle" />
            <TextView android:text="@string/sharing_picker_publish" style="@style/sharingPickerTextViewStyle" />
        </LinearLayout>
        <LinearLayout android:id="@id/sharing_picker_editppro" style="@style/sharingPickerButtonStyle">
            <ImageView android:src="@drawable/share_ppro" style="@style/sharingPickerImageStyle" />
            <TextView android:text="@string/sharing_picker_edit_pr" style="@style/sharingPickerTextViewStyle" />
        </LinearLayout>
        <LinearLayout android:id="@id/sharing_picker_youtube" style="@style/sharingPickerButtonStyle">
            <ImageView android:src="@drawable/share_youtube" style="@style/sharingPickerImageStyle" />
            <TextView android:text="@string/sharing_picker_youtube" style="@style/sharingPickerTextViewStyle" />
        </LinearLayout>
        <LinearLayout android:id="@id/sharing_picker_twitter" style="@style/sharingPickerButtonStyle">
            <ImageView android:src="@drawable/twitter" style="@style/sharingPickerImageStyle" />
            <TextView android:text="@string/sharing_picker_twitter" style="@style/sharingPickerTextViewStyle" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
