<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/round_dialog" android:paddingTop="20.0dp" android:paddingBottom="20.0dp" android:layout_width="280.0dp" android:layout_height="220.0dp">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="50.0dp" android:src="@drawable/btn_share_cclogo_big" android:adjustViewBounds="true" android:tint="@color/white" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/automatic_sync_title" android:layout_width="match_parent" android:layout_height="40.0dp" android:text="@string/automatic_backup_enabled" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/automatic_sync_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/automatic_backup_text" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/ok_view" android:layout_width="match_parent" android:layout_height="40.0dp" android:text="@string/ok_got_it" />
    </LinearLayout>
</LinearLayout>
