<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/adobe_csdk_actionbar_background_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="100.0" android:minWidth="130.0dp" android:minHeight="120.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="20.0">
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:textSize="18.0sp" android:textColor="@color/adobe_csdk_no_preview_color" android:id="@id/adobe_csdk_alert_dialog_box_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/adobe_csdk_asset_view_edit_dialog_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="40.0">
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:textSize="19.0sp" android:textColor="@color/adobe_csdk_grayText" android:id="@id/adobe_csdk_alert_dialog_box_title_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dp" android:layout_marginTop="10.0dp" android:layout_marginRight="30.0dp" android:text="@string/adobe_csdk_COLLABORATION_DELETE_MESSAGE" android:maxLines="2" android:layout_alignParentTop="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/adobe_csdk_assetview_dialog_fragment_layout_height" android:layout_weight="40.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginTop="2.0dp" android:layout_marginRight="20.0dp" android:layout_marginBottom="4.0dp" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
            <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:textSize="18.0sp" android:textColor="@color/adobe_csdk_grayText" android:gravity="center" android:id="@id/adobe_csdk_alert_dialog_box_negative_button" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/adobe_csdk_COLLABORATOR_DELETE_NEGATIVE_BUTTON" />
            <RelativeLayout android:layout_width="25.0dp" android:layout_height="match_parent" />
            <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView android:textSize="18.0sp" android:textColor="@color/adobe_csdk_blue_color" android:gravity="center" android:id="@id/adobe_csdk_alert_dialog_box_positive_button" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/adobe_csdk_COLLABORATOR_DELETE_POSITIVE_BUTTON" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
